--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
 
     <header>
-        <a href="./index.html">WebStudio</a>
+
         <nav>
+            <a href="/index.html">WebStudio</a>
             <ul>
                 <li>
                     <a href="">Studio</a>
